--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -12,6 +12,8 @@
 		<li><a href="/values" class="pa3 no-underline db">Values</a></li>
 
 		<li><a href="/post" class="pa3 no-underline db">Blog</a></li>
+		
+		<li><a href="/blog" class="pa3 no-underline db">New Blog</a></li>
 
 		<li><a href="/contact" class="pa3 no-underline db">Contact</a></li>
 	</ul>
